--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 
+
 Django==5.0.3
-djangorestframework==3.15.1
-drf-yasg==1.21.8   
-django-cors-headers==4.3.1
-django-environ
+djangorestframework==3.15.2
+drf-yasg==1.21.7
+django-environ==0.11.2
